# hep-mc

./: .gitignore  Makefile.am  NEWS  NEWS.rst  README  README.rst  TODO.rst  annotated.html  checkpoints2_8cpp-example.html  checkpoints_8cpp-example.html  citelist.html  classes.html  classhep_1_1callback-members.html  classhep_1_1callback.html  classhep_1_1chkpt-members.html  classhep_1_1chkpt.html  classhep_1_1chkpt__with__rng-members.html  classhep_1_1chkpt__with__rng.html  classhep_1_1distribution__parameters-members.html  classhep_1_1distribution__parameters.html  classhep_1_1distribution__result-members.html  classhep_1_1distribution__result.html  classhep_1_1integrand-members.html  classhep_1_1integrand.html  classhep_1_1integrand__inherit__graph.map  classhep_1_1integrand__inherit__graph.md5  classhep_1_1mc__point-members.html  classhep_1_1mc__point.html  classhep_1_1mc__point__inherit__graph.map  classhep_1_1mc__point__inherit__graph.md5  classhep_1_1mc__result-members.html  classhep_1_1mc__result.html  classhep_1_1mc__result__inherit__graph.map  classhep_1_1mc__result__inherit__graph.md5  classhep_1_1mpi__callback-members.html  classhep_1_1mpi__callback.html  classhep_1_1multi__channel__chkpt-members.html  classhep_1_1multi__channel__chkpt.html  classhep_1_1multi__channel__integrand-members.html  classhep_1_1multi__channel__integrand.html  (+136 more)
doc/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  callbacks.dox  checkpoints.dox  distributions.dox  examples.dox  footer.html  global_configuration.dox  integrands.dox  mainpage.dox  mc_helper.dox  meson.build  mpi_helper.dox  multi_channel.dox  plain.dox  references.bib  results.dox  vegas.dox  vegas_callback.dox  vegas_pdf.dox
examples/: Makefile.am  checkpoints.cpp  checkpoints2.cpp  distributions.cpp  distributions_example.cpp  grid_file  helper_example.cpp  helpers.cpp  meson.build  mpi_vegas.cpp  mpi_vegas_example.cpp  multi_channel.cpp  multi_channel_disabled_channels.cpp  multi_channel_example.cpp  read_linear_grid.cpp  simple_vegas.cpp  two_dimensional_distribution.cpp  vegas.cpp  vegas_advanced.cpp  vegas_example.cpp  vegas_grid.cpp  vegas_read_pdf.cpp  vegas_stop_after_precision.cpp  vegas_write_pdf.cpp
include/: Makefile.am  meson.build
include/hep/: mc-mpi.hpp  mc.hpp
include/hep/mc/: accumulator.hpp  accumulator_fwd.hpp  bin_projector.hpp  buffer_helper.hpp  callback.hpp  callback_helper.hpp  chkpt.hpp  default_vegas_parallelizer.hpp  discrete_distribution.hpp  distribution_accumulator.hpp  distribution_parameters.hpp  distribution_projector.hpp  distribution_result.hpp  distributions.hpp  distributions_with.hpp  function_value.hpp  generator_helper.hpp  global_configuration.hpp  integrand.hpp  kahan_accumulator.hpp  linear_grid.hpp  mc_helper.hpp  mc_point.hpp  mc_result.hpp  mpi_callback.hpp  mpi_datatype.hpp  mpi_helper.hpp  mpi_multi_channel.hpp  mpi_multi_channel_callback.hpp  mpi_plain.hpp  mpi_plain_callback.hpp  mpi_vegas.hpp  mpi_vegas_callback.hpp  multi_channel.hpp  multi_channel_callback.hpp  multi_channel_chkpt.hpp  multi_channel_distribution_result.hpp  multi_channel_integrand.hpp  multi_channel_map.hpp  multi_channel_max_difference.hpp  (+21 more)
include/hep/mc/impl/: plain.hpp  vegas.hpp  vegas_result.hpp  vegas_sample.hpp
include/hep/mc/internal/: accumulator.hpp  accumulator_fwd.hpp  callback_helper.hpp  discrete_distribution.hpp  generator_helper.hpp  mpi_helper.hpp
m4/: ax_mpi_flags.m4  lx_find_mpi.m4
scripts/: update-gh-pages.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_62.js  all_65.js  all_67.js  all_69.js  all_6d.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6d.js  classes_76.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_12.js  (+47 more)
src/: chkpt.cpp  make_chkpt.hpp  meson.build  operations.cpp  operations.hpp  read_type.cpp  read_type.hpp  stream_rng.cpp  stream_rng.hpp
tests/: Makefile.am  catch_mpi.cpp  genz_integrand.cpp  genz_integrand.hpp  gtest_main.cpp  gtest_mpi_main.cpp  meson.build  test_discrete_distribution.cpp  test_distribution_parameters.cpp  test_distributions.cpp  test_genz_integrand.cpp  test_linear_grid.cpp  test_mc_helper.cpp  test_mc_point.cpp  test_mc_result.cpp  test_mpi_numerical_results.cpp  test_mpi_numerical_results.sh.in  test_mpi_vegas.cpp  test_multi_channel.cpp  test_multi_channel_chkpt.cpp  test_multi_channel_with_relative_precision.cpp  test_non_finite_integrand.cpp  test_numerical_results.cpp  test_piecewise_constant_pdf.cpp  test_plain.cpp  test_plain_chkpt.cpp  test_plain_with_distributions.cpp  test_plain_with_genz_integrands.cpp  test_plain_with_relative_precision.cpp  test_vegas.cpp  test_vegas_chkpt.cpp  test_vegas_icdf_bug.cpp  test_vegas_pdf.cpp  test_vegas_with_genz_integrands.cpp  test_vegas_with_relative_precision.cpp
