option('enable-doxygen', type : 'boolean', value : false,
	description : 'Enable building of documentation')
option('enable-examples', type : 'boolean', value : false,
	description : 'Enable building of examples')
option('enable-mpi', type : 'boolean', value : false,
	description : 'Enable building of MPI examples and unit tests')
